package ar.edu.utn.frc.tup.lciii.models;

public interface Play {
}
